# B1-BAZEN-THEMA-DEVICES

./: .gitignore  README
code/: CMakeLists.txt
code/libs/bmptk/: Makefile.inc  Makefile.local  bmptk.h
code/libs/bmptk/targets/: bmptk_heap_bmptk.c  bmptk_heap_none.c  bmptk_stack.c
code/libs/bmptk/targets/cortex/: bmptk_cortex.c  bmptk_linkerscript_cortex.c
code/libs/bmptk/targets/cortex/cmsis/: core_cm0.h  core_cm0plus.h  core_cm3.h  core_cm4.h  core_sc000.h  core_sc300.h
code/libs/bmptk/targets/msp430/include/: msp430fr4133.h  msp430g2553.h
code/libs/bmptk/webpage/: index_1.html
code/libs/hwlib/: hwlib-all.hpp  hwlib-console.hpp  hwlib-due.hpp  hwlib-glcd-5510.hpp  hwlib-glcd-oled.hpp  hwlib-graphics.hpp  hwlib-i2c.hpp  hwlib-matrix-keypad.hpp  hwlib-ostream.hpp  hwlib-port.hpp  hwlib-wait.hpp  hwlib.hpp
code/libs/rtos/: coroutine.hpp  rtos.cpp  rtos.hpp
code/nul_versie/receiver/: CMakeLists.txt  Makefile  bmptk_fixed_size_stack.c
code/nul_versie/receiver/src/: main.cpp
code/nul_versie/receiver/src/applicationLogic/: command.cpp  command.h
code/nul_versie/transmitter/: CMakeLists.txt  Makefile  bmptk_fixed_size_stack.c
code/nul_versie/transmitter/src/: main.cpp
code/nul_versie_receiver/: CMakeLists.txt
code/nul_versie_receiver/src/: main.cpp  main.ld  main.map
code/nul_versie_transmitter/src/: main.cpp  main.elf  main.ld
code/proof of concept/: Makefile  bmptk_fixed_size_stack.c  lasertag
code/proof of concept herkansing/: Makefile  lasertag
code/proof of concept herkansing/src/: main.cpp
code/proof of concept herkansing/src/applicationLogic/: command.cpp
code/proof of concept herkansing/src/boundaries/: button.cpp  button.h  receiver.cpp  receiver.h  sound.cpp  sound.h  transmitter.cpp  transmitter.h
code/proof of concept herkansing/src/controllers/: displayController.cpp  displayController.h  initGameController.cpp  initGameController.h  runGameController.cpp  runGameController.h
code/proof of concept herkansing/src/entities/: arsenal.cpp  arsenal.h  gameParameters.cpp  gameParameters.h  weapon.cpp  weapon.h
code/proof of concept/docs/html/: annotated.html  classes.html  dir_000000_000001.html  dir_000000_000002.html  dir_000002_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_b118c466441e8db851de69c6796245a3.html  dir_b118c466441e8db851de69c6796245a3_dep.md5  dir_d691984d1d74be3b164cee16192654be.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.md5  inherit_graph_1.md5  inherit_graph_2.md5  inherit_graph_3.md5  inherit_graph_4.md5  inherits.html  menudata.js
code/proof of concept/docs/html/d0/d09/: command_8h.html  command_8h_source.html
code/proof of concept/docs/html/d0/d0c/: transmitter_8h__dep__incl.md5
code/proof of concept/docs/html/d0/d1a/: classMain-members.html
code/proof of concept/docs/html/d0/d20/: initGameController_8cpp.html
code/proof of concept/docs/html/d0/d36/: classSoundController.html  classSoundController_a209f6e43b82aef6d2b5d3dd1afc9d038_cgraph.md5  classSoundController_a386d0045184b4dfd03751c450ec0ff81_icgraph.md5  classSoundController_a763653b95ac51c79b13ec90170a5fd6b_icgraph.md5
code/proof of concept/docs/html/d0/d52/: controller_8h__incl.md5
code/proof of concept/docs/html/d0/d8f/: buttonController_8h.html  buttonController_8h_source.html
code/proof of concept/docs/html/d0/da5/: classTransmitter__coll__graph.md5
code/proof of concept/docs/html/d0/dff/: initGameController_8cpp__incl.md5
code/proof of concept/docs/html/d1/d13/: registerController_8h__incl.md5
code/proof of concept/docs/html/d1/d27/: structSound-members.html
code/proof of concept/docs/html/d1/d2a/: transmitter_8cpp__incl.md5
code/proof of concept/docs/html/d1/d36/: classController-members.html
code/proof of concept/docs/html/d1/d81/: command_8cpp.html
code/proof of concept/docs/html/d1/d99/: structreceive__shot.html
code/proof of concept/docs/html/d1/db4/: registerController_8h__dep__incl.md5
code/proof of concept/docs/html/d1/dc4/: transmitter_8h.html  transmitter_8h_source.html
code/proof of concept/docs/html/d1/dc5/: classRunGameController-members.html
code/proof of concept/docs/html/d1/dcb/: classCommand-members.html
code/proof of concept/docs/html/d1/de6/: classTransmitter-members.html
code/proof of concept/docs/html/d2/d14/: soundController_8h.html  soundController_8h_source.html
code/proof of concept/docs/html/d2/d2d/: runGameController_8cpp__incl.md5
code/proof of concept/docs/html/d2/da9/: registerController_8cpp.html
code/proof of concept/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+28 more)
code/proof of concept/src/: main.cpp
code/proof of concept/src/boundaries/: keypad.h  oled.h
code/proof of concept/src/entities/: gameParameters.cpp  gameParameters.h
code/proof of concept/src/tasks/: buttonController.cpp  buttonController.h  comStation.cpp  comStation.h  command.cpp  command.h  controller.h  displayController.cpp  displayController.h  gameClock.cpp  gameClock.h  gameManager.cpp  gameManager.h  initGameController.cpp  initGameController.h  leader.cpp  leader.h  leaderDisplay.cpp  leaderDisplay.h  player.cpp  player.h  playerDisplay.cpp  playerDisplay.h  receive.cpp  receive.h  receiver.cpp  receiver.h  registerController.cpp  registerController.h  runGameController.cpp  runGameController.h  soundController.cpp  soundController.h  soundManager.cpp  soundManager.h  transmitter.cpp  transmitter.h
(+161 files in other folders)
