cmake_minimum_required(VERSION 3.5)
project(code)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    libs/bmptk/examples/boards/arduino_due/blink/main.c
    libs/bmptk/examples/boards/arduino_due/calculated-stack/bmptk_calculated_size_stack.c
    libs/bmptk/examples/boards/arduino_due/calculated-stack/bmptk_fixed_size_stack.c
    libs/bmptk/examples/boards/arduino_due/calculated-stack/main.cpp
    libs/bmptk/examples/boards/arduino_uno/blink/main.c
    libs/bmptk/examples/boards/db103/blink/main.c
    libs/bmptk/examples/boards/db103/blink-absolute-path/main.c
    libs/bmptk/examples/boards/db103/blink-calculated-stack/bmptk_calculated_size_stack.c
    libs/bmptk/examples/boards/db103/blink-calculated-stack/bmptk_fixed_size_stack.c
    libs/bmptk/examples/boards/db103/blink-calculated-stack/main.c
    libs/bmptk/examples/boards/db103/memory/main.c
    libs/bmptk/examples/boards/db103/memory/sw-uart.c
    libs/bmptk/examples/boards/db103/memory/sw-uart.h
    libs/bmptk/examples/boards/db103/memory/timer.c
    libs/bmptk/examples/boards/db103/memory/timer.h
    libs/bmptk/examples/boards/db104/blink/main.c
    libs/bmptk/examples/boards/db105/blink/main.c
    libs/bmptk/examples/boards/esp8266/blink/main.c
    libs/bmptk/examples/boards/esp8266/gold-blink/main.c
    libs/bmptk/examples/boards/esp8266/nodemcu-blink/main.c
    libs/bmptk/examples/boards/frdm_kl25z/blink/main.c
    libs/bmptk/examples/boards/hu_arm_v4/blink/main.c
    libs/bmptk/examples/boards/lpc800_max/blink/main.c
    libs/bmptk/examples/boards/lpc800_mini_kit/blink/main.c
    libs/bmptk/examples/boards/msp_exp430fr4133/blink/main.c
    libs/bmptk/examples/boards/msp_exp430g2/blink/main.c
    libs/bmptk/examples/boards/native/hello-c/main.c
    libs/bmptk/examples/boards/native/hello-c++/main.cpp
    libs/bmptk/examples/boards/stm32f0discovery/blink/main.c
    libs/bmptk/examples/boards/stm32f411nucleo/blink/main.c
    libs/bmptk/examples/boards/stm32l1discovery/blink/main.c
    libs/bmptk/examples/boards/tiny_11c14/blink/main.c
    libs/bmptk/examples/boards/xmc_2go_1100/blink/main.c
    libs/bmptk/targets/armv7/include/lpc2148.h
    libs/bmptk/targets/armv7/linkerscript.c
    libs/bmptk/targets/avr/include/common.h
    libs/bmptk/targets/avr/include/fuse.h
    libs/bmptk/targets/avr/include/io.h
    libs/bmptk/targets/avr/include/iom328.h
    libs/bmptk/targets/avr/include/iom328p.h
    libs/bmptk/targets/avr/include/lock.h
    libs/bmptk/targets/avr/include/portpins.h
    libs/bmptk/targets/avr/include/sfr_defs.h
    libs/bmptk/targets/avr/include/version.h
    libs/bmptk/targets/avr/bmptk_linkerscript_avr5_xn.c
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/adc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/can.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/chipid.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/dacc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/dmac.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/efc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/emac.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/gpbr.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/hsmci.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/matrix.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/pdc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/pio.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/pmc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/pwm.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/rstc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/rtc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/rtt.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/sdramc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/smc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/spi.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/ssc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/supc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/tc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/trng.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/twi.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/uart.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/uotghs.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/usart.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/component/wdt.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/adc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/can0.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/can1.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/chipid.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/dacc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/dmac.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/efc0.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/efc1.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/emac.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/gpbr.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/hsmci.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/matrix.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/pioa.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/piob.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/pioc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/piod.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/pioe.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/piof.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/pmc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/pwm.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/rstc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/rtc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/rtt.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/sdramc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/smc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/spi0.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/spi1.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/ssc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/supc.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/tc0.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/tc1.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/tc2.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/trng.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/twi0.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/twi1.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/uart.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/uotghs.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/usart0.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/usart1.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/usart2.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/usart3.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/instance/wdt.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/pio/sam3a4c.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/pio/sam3a8c.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/pio/sam3x4c.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/pio/sam3x4e.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/pio/sam3x8c.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/pio/sam3x8e.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/pio/sam3x8h.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/sam3a4c.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/sam3a8c.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/sam3x4c.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/sam3x4e.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/sam3x8c.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/sam3x8e.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/sam3x8h.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/sam3xa.h
    libs/bmptk/targets/cortex/atmel/sam3xa/include/system_sam3xa.h
    libs/bmptk/targets/cortex/atmel/sam3xa/source/as_gcc/startup_sam3xa.c
    libs/bmptk/targets/cortex/atmel/sam3xa/source/system_sam3xa.c
    libs/bmptk/targets/cortex/atmel/core_cm3.h
    libs/bmptk/targets/cortex/atmel/core_cmFunc.h
    libs/bmptk/targets/cortex/atmel/core_cmInstr.h
    libs/bmptk/targets/cortex/atmel/sam.h
    libs/bmptk/targets/cortex/atmel/sam3.h
    libs/bmptk/targets/cortex/cmsis/arm_common_tables.h
    libs/bmptk/targets/cortex/cmsis/arm_const_structs.h
    libs/bmptk/targets/cortex/cmsis/arm_math.h
    libs/bmptk/targets/cortex/cmsis/core_cm0.h
    libs/bmptk/targets/cortex/cmsis/core_cm0plus.h
    libs/bmptk/targets/cortex/cmsis/core_cm3.h
    libs/bmptk/targets/cortex/cmsis/core_cm4.h
    libs/bmptk/targets/cortex/cmsis/core_cm4_simd.h
    libs/bmptk/targets/cortex/cmsis/core_cmFunc.h
    libs/bmptk/targets/cortex/cmsis/core_cmInstr.h
    libs/bmptk/targets/cortex/cmsis/core_sc000.h
    libs/bmptk/targets/cortex/cmsis/core_sc300.h
    libs/bmptk/targets/cortex/freescale/cmsis/MKL25Z4.h
    libs/bmptk/targets/cortex/freescale/cmsis/system_MKL25Z4.h
    libs/bmptk/targets/cortex/infineon/cmsis/system_XMC1100.h
    libs/bmptk/targets/cortex/infineon/cmsis/XMC1000_RomFunctionTable.h
    libs/bmptk/targets/cortex/infineon/cmsis/XMC1100.h
    libs/bmptk/targets/cortex/lpc/cmsis/11xx/inc/core_cm0.h
    libs/bmptk/targets/cortex/lpc/cmsis/11xx/inc/core_cmFunc.h
    libs/bmptk/targets/cortex/lpc/cmsis/11xx/inc/core_cmInstr.h
    libs/bmptk/targets/cortex/lpc/cmsis/11xx/inc/LPC11xx.h
    libs/bmptk/targets/cortex/lpc/cmsis/11xx/inc/system_LPC11xx.h
    libs/bmptk/targets/cortex/lpc/cmsis/11xx/src/core_cm0.c
    libs/bmptk/targets/cortex/lpc/cmsis/11xx/src/system_LPC11xx.c
    libs/bmptk/targets/cortex/lpc/cmsis/12xx/inc/core_cm0.h
    libs/bmptk/targets/cortex/lpc/cmsis/12xx/inc/core_cmFunc.h
    libs/bmptk/targets/cortex/lpc/cmsis/12xx/inc/core_cmInstr.h
    libs/bmptk/targets/cortex/lpc/cmsis/12xx/inc/LPC122x.h
    libs/bmptk/targets/cortex/lpc/cmsis/12xx/inc/LPC12xx.h
    libs/bmptk/targets/cortex/lpc/cmsis/12xx/inc/system_LPC122x.h
    libs/bmptk/targets/cortex/lpc/cmsis/12xx/inc/system_LPC12xx.h
    libs/bmptk/targets/cortex/lpc/cmsis/12xx/src/core_cm0.c
    libs/bmptk/targets/cortex/lpc/cmsis/12xx/src/system_LPC122x.c
    libs/bmptk/targets/cortex/lpc/cmsis/13xx/inc/core_cm3.h
    libs/bmptk/targets/cortex/lpc/cmsis/13xx/inc/core_cmFunc.h
    libs/bmptk/targets/cortex/lpc/cmsis/13xx/inc/core_cmInstr.h
    libs/bmptk/targets/cortex/lpc/cmsis/13xx/inc/LPC13xx.h
    libs/bmptk/targets/cortex/lpc/cmsis/13xx/inc/power_api.h
    libs/bmptk/targets/cortex/lpc/cmsis/13xx/inc/system_LPC13xx.h
    libs/bmptk/targets/cortex/lpc/cmsis/13xx/src/core_cm3.c
    libs/bmptk/targets/cortex/lpc/cmsis/13xx/src/system_LPC13xx.c
    libs/bmptk/targets/cortex/lpc/cmsis/lpc800/inc/cmsis.h
    libs/bmptk/targets/cortex/lpc/cmsis/lpc800/inc/cmsis_nvic.c
    libs/bmptk/targets/cortex/lpc/cmsis/lpc800/inc/cmsis_nvic.h
    libs/bmptk/targets/cortex/lpc/cmsis/lpc800/inc/core_cm0.c
    libs/bmptk/targets/cortex/lpc/cmsis/lpc800/inc/core_cm0plus.h
    libs/bmptk/targets/cortex/lpc/cmsis/lpc800/inc/core_cmFunc.h
    libs/bmptk/targets/cortex/lpc/cmsis/lpc800/inc/core_cmInstr.h
    libs/bmptk/targets/cortex/lpc/cmsis/lpc800/inc/LPC8xx.h
    libs/bmptk/targets/cortex/lpc/cmsis/lpc800/inc/system_LPC8xx.c
    libs/bmptk/targets/cortex/lpc/cmsis/lpc800/inc/system_LPC8xx.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f030x6.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f030x8.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f031x6.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f038xx.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f042x6.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f048xx.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f051x8.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f058xx.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f071xb.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f072xb.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f078xx.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f091xc.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f098xx.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f0xx.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f401xc.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f401xe.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f405xx.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f407xx.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f411xe.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f415xx.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f417xx.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f427xx.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f429xx.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f437xx.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f439xx.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32f4xx.h
    libs/bmptk/targets/cortex/stm32/cmsis/stm32l1xx.h
    libs/bmptk/targets/cortex/stm32/cmsis/system_stm32f0xx.h
    libs/bmptk/targets/cortex/stm32/cmsis/system_stm32f4xx.h
    libs/bmptk/targets/cortex/stm32/cmsis/system_stm32l1xx.h
    libs/bmptk/targets/cortex/bmptk_cortex.c
    libs/bmptk/targets/cortex/bmptk_linkerscript_cortex.c
    libs/bmptk/targets/esp8266/esp8266.h
    libs/bmptk/targets/esp8266/user_config.h
    libs/bmptk/targets/msp430/include/in430.h
    libs/bmptk/targets/msp430/include/iomacros.h
    libs/bmptk/targets/msp430/include/msp430.h
    libs/bmptk/targets/msp430/include/msp430fr4133.h
    libs/bmptk/targets/msp430/include/msp430g2553.h
    libs/bmptk/targets/bmptk_heap_bmptk.c
    libs/bmptk/targets/bmptk_heap_none.c
    libs/bmptk/targets/bmptk_stack.c
    libs/bmptk/tools/check_serial_port/check_serial_port.c
    libs/bmptk/tools/copy_to_drive/copy_to_drive.cpp
    libs/bmptk/tools/image_sizes/image_sizes.c
    libs/bmptk/tools/lpc21isp_197/adprog.c
    libs/bmptk/tools/lpc21isp_197/adprog.h
    libs/bmptk/tools/lpc21isp_197/lpc21isp.c
    libs/bmptk/tools/lpc21isp_197/lpc21isp.h
    libs/bmptk/tools/lpc21isp_197/lpcprog.c
    libs/bmptk/tools/lpc21isp_197/lpcprog.h
    libs/bmptk/tools/lpc21isp_197/lpcterm.c
    libs/bmptk/tools/lpc21isp_197/lpcterm.h
    libs/bmptk/tools/lpc21isp_197/StdAfx.h
    libs/bmptk/bmptk.h
    libs/hwlib/hwlib-adc.hpp
    libs/hwlib/hwlib-all.hpp
    libs/hwlib/hwlib-console.hpp
    libs/hwlib/hwlib-dac.hpp
    libs/hwlib/hwlib-db103.hpp
    libs/hwlib/hwlib-defines.hpp
    libs/hwlib/hwlib-demo.hpp
    libs/hwlib/hwlib-doxygen.hpp
    libs/hwlib/hwlib-due-system-sam3xa.hpp
    libs/hwlib/hwlib-due.hpp
    libs/hwlib/hwlib-font-default-16x16.hpp
    libs/hwlib/hwlib-font-default-8x8.hpp
    libs/hwlib/hwlib-glcd-5510.hpp
    libs/hwlib/hwlib-glcd-oled.hpp
    libs/hwlib/hwlib-graphics.hpp
    libs/hwlib/hwlib-hc595.hpp
    libs/hwlib/hwlib-hd44780.hpp
    libs/hwlib/hwlib-i2c.hpp
    libs/hwlib/hwlib-matrix-keypad.hpp
    libs/hwlib/hwlib-ostream.hpp
    libs/hwlib/hwlib-panic.cpp
    libs/hwlib/hwlib-panic.hpp
    libs/hwlib/hwlib-pcf8574a.hpp
    libs/hwlib/hwlib-pcf8591.hpp
    libs/hwlib/hwlib-pi.hpp
    libs/hwlib/hwlib-pin-dummies.hpp
    libs/hwlib/hwlib-pin.hpp
    libs/hwlib/hwlib-port.hpp
    libs/hwlib/hwlib-spi.hpp
    libs/hwlib/hwlib-uno.hpp
    libs/hwlib/hwlib-wait.hpp
    libs/hwlib/hwlib.cpp
    libs/hwlib/hwlib.hpp
    libs/rtos/coroutine.cpp
    libs/rtos/coroutine.hpp
    libs/rtos/rtos.cpp
    libs/rtos/rtos.hpp
    libs/rtos/switch_to.hpp
        "proof of concept/src/tasks/receiver.cpp"
        "proof of concept/src/tasks/receiver.h"
    "proof of concept/src/main.bin"
    "proof of concept/src/main.cpp"
    "proof of concept/src/main.elf"
    "proof of concept/src/main.ld"
    "proof of concept/src/main.map"
    "proof of concept/src/main.o"
    "proof of concept/bmptk_cortex.o"
    "proof of concept/bmptk_fixed_size_stack.c"
    "proof of concept/bmptk_fixed_size_stack.o"
    "proof of concept/bmptk_heap_bmptk.o"
    "proof of concept/CMakeLists.txt"
    "proof of concept/coroutine.o"
    "proof of concept/hwlib.o"
    "proof of concept/Makefile"
    "proof of concept/rtos.o"
    "proof of concept/switch_to.o" "proof of concept/src/tasks/transmitter.cpp" "proof of concept/src/tasks/transmitter.h" "proof of concept/src/tasks/controller.h" "proof of concept/src/tasks/initGameController.cpp" "proof of concept/src/tasks/initGameController.cpp" "proof of concept/src/tasks/initGameController.h" "proof of concept/src/tasks/command.cpp" "proof of concept/src/tasks/command.h" "proof of concept/src/tasks/registerController.cpp" "proof of concept/src/tasks/registerController.h" "proof of concept/src/tasks/soundController.cpp" "proof of concept/src/tasks/soundController.h" "proof of concept/src/tasks/buttoController.h" "proof of concept/src/tasks/buttoController.cpp")

add_executable(code ${SOURCE_FILES})